// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slack name battle conducts a name battle between aaaaa and a 1`] = `
Object {
  "response_type": "in_channel",
  "text": "<@a> challenges <@aaaaa> to a Name Battle! :collision: *_a_* attacks *_aaaaa_* in a parallel universe...
aaaaa is barely affected, with *80.00%* life force remaining! A paltry attack! :joy:",
}
`;

exports[`Slack name battle conducts a name battle between aaaaa and aa 1`] = `
Object {
  "response_type": "in_channel",
  "text": "<@aa> challenges <@aaaaa> to a Name Battle! :collision: *_aa_* attacks *_aaaaa_* in a parallel universe...
aaaaa is wounded, with *60.00%* life force remaining! A worrying attack! :gun:",
}
`;

exports[`Slack name battle conducts a name battle between michael and michael 1`] = `
Object {
  "response_type": "in_channel",
  "text": "<@michael> challenges <@michael> to a Name Battle! :collision: *_michael_* attacks *_michael_* in a parallel universe...
michael is dead, with *0%* life force remaining! A devastating attack! :skull:",
}
`;

exports[`Slack name battle conducts a name battle between target and attacker 1`] = `
Object {
  "response_type": "in_channel",
  "text": "<@attacker> challenges <@target> to a Name Battle! :collision: *_attacker_* attacks *_target_* in a parallel universe...
target is critically injured, with *16.67%* life force remaining! A destructive attack! :face_with_head_bandage:",
}
`;

exports[`Slack name battle kills the attacker if they change their name 1`] = `
Object {
  "response_type": "in_channel",
  "text": "<@attacker> challenges <@target> to a Name Battle! :collision: *_attacker_* attacks *_target_* in a parallel universe...
:redsiren: attacker changed their name! For shame! target is unaffected, and attacker dies instead! :redsiren:",
}
`;

exports[`Slack name battle sends an error message if the attacker is dead 1`] = `
Object {
  "text": "Could not conduct Name Battle! Error: You can't Name Battle: you're dead!.",
}
`;

exports[`Slack name battle sends an error message if the target is dead 1`] = `
Object {
  "text": "Could not conduct Name Battle! Error: Target is already dead!.",
}
`;

exports[`Slack name battle sends an error when there is a signature mismatch 1`] = `
Object {
  "text": "Could not conduct Name Battle! Error: Forbidden: signature mismatch.",
}
`;
